fix - 정지사유 추가